# PyFrame_LAB4

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  factory.py  main.py
app/api/: __init__.py  deps.py
app/api/routers/: auth.py  health.py  lookups.py
app/core/: config.py  database.py  exception_handlers.py  exceptions.py  logging.py  security.py
app/models/: __init__.py  history.py  user.py
app/repositories/: history_repository.py  user_repository.py
app/schemas/: auth.py  geo.py  history.py
app/services/: auth_service.py  geolocation_service.py  lookup_service.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: base.html  index.html  login.html  register.html  result.html
app/web/: __init__.py  deps.py  flash.py  router.py
tests/: conftest.py  test_auth_and_lookups.py  test_frontend.py  test_geolocation_service.py
